Added Video to Diablo
also added:
- headers to homepage
- design process to about me
changed:
- reduced video size of OW2 & drivetalk videos
- hearthstone image
- insaniquarium image
-  fixed typos

--- a/about.html
+++ b/about.html
@@ -33,16 +33,44 @@ title: "About Me"
             </div>
         </div>
     </div>
-    
 </ul>
-<!-- Idea for later, show off that the welcome text and blue highlighted text on the page change when clicked!
- Ignore how I formatted this, it doesn't work yet :/
-    </div class="topContainer" style="font-size:0.5em;">
-        <ul>
-            <em>Try clicking on the words highlighted in blue and the welcome text at the top of the page for a surprise!</em>
-        </ul>
+
+<hr>
+
+<div class="topContainer">
+    <h1 style="margin-bottom:1.5rem;">My Design Process!</h1>
+</div>
+<div class="gamesContainer">
+    <div class="designProcessItem">
+        <h3><em>1. <span style="text-decoration: underline;">Understand Goals</span></em></h3>
+        <p>Speak with <strong>Narrative Designers</strong>, <strong>VFX</strong>, <strong>UIUX</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
     </div>
--->
+    <div class="designProcessItem">
+        <h3><em>2. <span style="text-decoration: underline;">Brainstorm & Research</span></em></h3>
+        <p>
+            What could be <strong>missing</strong> from our game?
+            What things do I find <strong>fun</strong>?
+            What <strong>similar content</strong> already exists in our game or others?
+            What did <strong>players think</strong> of that content?
+        </p>
+    </div>
+    <div class="designProcessItem">
+        <h3><em>3. <span style="text-decoration: underline;">Implement</span></em></h3>
+        <p>
+            <strong>Implement</strong>, <strong>iterate</strong>, and <strong>debug</strong>
+            prototypes by <strong>scripting</strong> or working <strong>in-editor</strong>.
+        </p>
+    </div>
+    <div class="designProcessItem">
+        <h3><em>4. <span style="text-decoration: underline;">Playtest</span></em></h3>
+        <p>
+            Lead and participate in <strong>playtests</strong> to give and receive valuable <strong>feedback</strong> and <strong>data</strong>.
+            <br>
+            Unless things feel <strong>"just right"</strong>, go back to 
+            <br><strong>2. Brainstorm & Research</strong>!
+        </p>
+    </div>
+</div>
 
 <hr>
 
@@ -52,16 +80,16 @@ title: "About Me"
 
 <div class="homePageGames">    
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us"><img src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Into The Emerald Dream Cover Art"></a>
+        <a href="https://playthebazaar.com/"><img src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art"></a>
+        <figcaption>THE BAZAAR</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://hearthstone.blizzard.com/en-us"><img src="images/CurrentlyPlaying/Hearthstone.png" alt="Hearthstone Into The Emerald Dream Cover Art"></a>
         <figcaption>HEARTHSTONE</figcaption>
     </div>
     <div class="game">
         <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFTSet15.jpg" alt="Teamfight Tactics Set 15 Cover Art"></a>
         <figcaption>TEAMFIGHT TACTICS</figcaption>
-    </div>
-    <div class="game">
-        <a href="https://playthebazaar.com/"><img src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art"></a>
-        <figcaption>THE BAZAAR</figcaption>
     </div>
 </div>
 
