--- a/diablo.html
+++ b/diablo.html
@@ -8,8 +8,11 @@ title: "Diablo IV"
 
 <div class="gamesContainer">
     <div class="gameAsset">
-        <img src="images/DiabloIV/TheButcher.png" alt="The Butcher from Diablo IV with a bow and hearts around him. At the bottom it says 'Fresh Meat'.">
-        <figcaption>"COME BACK LATER!!!"</figcaption>
+        <video controls autoplay loop muted>
+            <source src="images/DiabloIV/DiabloShowcase_Smaller.mp4" type="video/mp4">
+            Your browser does not support the video tag.  
+        </video> 
+        <figcaption>My Season 7 Witchcraft Powers!</figcaption>
     </div>
     <!--<div div class="gameAsset">
         <img src="images/DiabloIV/MenageristGlyph.png" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
@@ -22,8 +25,8 @@ title: "Diablo IV"
         <p>
             <ul>
                 <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
-                <li>Created <strong>3 skills</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
-                <li>Prototyped multiple <strong>Witchcraft powers</strong> for <strong>Season 7</strong>.</li>
+                <li>Created <strong>4 permanent powers</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
+                <li>Prototyped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong>.</li>
                 <li>Collaborated with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
                 <li><strong>Organized playtests</strong> and iterated on prototypes based on feedback.</li>
                 <li>Fixed bugs and kept track of assigned tasks utilizing <strong>Jira</strong>.</li>
@@ -31,17 +34,37 @@ title: "Diablo IV"
             </ul>
         </p>
     </div>
-<!--
+    <!--
     <div class="item">
         <h2><em>Season 7 Witchcraft Powers</em></h2>
-        <p>
-            <em>UNDER CONSTRUCTION!</em>
-        </p>
+        <h3>My Design Cycle looked like:</h3>
+            <li><h4>> UNDERSTAND GOALS</h4></li>
+                Our intention with these Season 7 Witch powers was to create visually impressive, lore-rich, impactful powers
+                that players could really <em>feel</em>.
+                I understood this to be our goal after speaking with Narrative Designers, VFX, and the Design Lead for the season.
+            <li><h4>> RESEARCH</h4></li>
+                My first step was to look back at past seasons to see what we did right and wrong.
+                I aimed to find what made past seasons' powers feel impactful, so we could
+            <li><h4>> BRAINSTORM</h4></li>
+                My goal is to get as many ideas down as quickly as possible, let them 'marinate',
+                and then revisit them later to see if they have merit.
+            <li><h4>> IMPLEMENT PROTOTYPES</h4></li>
+
+            <li><h4>> PLAYTEST</h4></li>
+                I led numerous internal playtests with playtesters from different disciplines and game expertise.
+            <li><h4>> ITERATION</h4></li>
+                Using the feedback we received from playtesting, I iterated upon my existing designs.
+            <li><h4>> BACK TO RESEARCH!</h4></li>
+                With iteration comes more research, brainstorming, implementation, and playtesting!
+                This cycle keeps happening over and over until we've got the feel and balance <em>just right</em>.
     </div>
     <div class="item">
         <h2><em>Spiritborn Paragon Glyphs & Nodes</em></h2>
         <p>
-            <em>UNDER CONSTRUCTION!</em>
+            My first project while on the Diablo Class Design team was to make 4 Paragon Glyphs for the then unreleased class, Spiritborn.
+            I worked alongside another designer to create Glyphs that supported different existing playstyles.
+            This project helped me to get familiar with scripting in Diablo's proprietary engine.
+            I also named most of Spiritborn's Paragon Glyphs and Rare Paragon Nodes.
         </p>
     </div>
     -->
