--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 layout: default
 title: "Home"
 ---
-
+<div class="topContainer">
+    <h1  style="margin-top: 3rem;">Professional Experience</h1>
+</div>
 <div class="homePageGames">
+    <br>
     <div class="game">
         <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
         <figcaption>DIABLO IV</figcaption>
@@ -12,12 +15,16 @@ title: "Home"
         <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
         <figcaption>OVERWATCH 2</figcaption>
     </div>
-    
+</div>
+<hr>
+<div class="topContainer">
+    <h1>Game Projects</h1>
+</div>
+<div class="homePageGames">
     <div class="game">
         <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
         <figcaption>DRIVETALK</figcaption>
     </div>
-
     <div class="game">
         <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
         <figcaption>UCI-WARE</figcaption>
@@ -26,6 +33,12 @@ title: "Home"
         <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
         <figcaption>EDO EDO TEISHOKU!</figcaption>
     </div>
+</div>
+<hr>
+<div class="topContainer">
+    <h1>Physical Card Games</h1>
+</div>
+<div class="homePageGames">
     <div class="game">
         <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
         <figcaption>THE WORMCHELOR</figcaption>
