Hopefully fixed Hearthstone image bug?

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ title: "About Me"
             <br>
             I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
             As of March 2024, I'm also a <strong>Design officer</strong> at <strong>UCI's Video Game Development Club</strong>.
-            I'm a big fan of <strong>roguelikes</strong> and I derive a lot of my inspiration from them.
+            I'm a big fan of <strong>autobattlers</strong> and <strong>roguelikes</strong> and I derive a lot of my inspiration from them.
         </p>
         <div class="customizaAboutMe">
             <p>I am </p>
@@ -84,7 +84,7 @@ title: "About Me"
         <figcaption>THE BAZAAR</figcaption>
     </div>
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us"><img src="images/CurrentlyPlaying/Hearthstone.png" alt="Hearthstone Into The Emerald Dream Cover Art"></a>
+        <a href="https://hearthstone.blizzard.com/en-us"><img src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Lost City of Un'Goro Cover Art"></a>
         <figcaption>HEARTHSTONE</figcaption>
     </div>
     <div class="game">
