--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ title: "About Me"
 <div class="gamesContainer">
     <div class="designProcessItem">
         <h3><em>1. <span style="text-decoration: underline;">Understand Goals</span></em></h3>
-        <p>Speak with <strong>Narrative Designers</strong>, <strong>VFX</strong>, <strong>UIUX</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
+        <p>Speak with <strong>Narrative Designers</strong>, <strong>VFX</strong>, <strong>Animators</strong>, <strong>UIUX</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
     </div>
     <div class="designProcessItem">
         <h3><em>2. <span style="text-decoration: underline;">Brainstorm & Research</span></em></h3>
