--- a/diablo.html
+++ b/diablo.html
@@ -26,6 +26,7 @@ title: "Diablo IV"
             <ul>
                 <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
                 <li>Created <strong>4 permanent powers</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
+                <li>Consulted with <strong>Narrative Designers</strong> to name <strong>38</strong> permanent Spiritborn powers.</li>
                 <li>Prototyped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong>.</li>
                 <li>Collaborated with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
                 <li><strong>Organized playtests</strong> and iterated on prototypes based on feedback.</li>
