--- a/about.html
+++ b/about.html
@@ -42,11 +42,13 @@ title: "About Me"
 </div>
 <div class="gamesContainer">
     <div class="designProcessItem">
-        <h3><em>1. <span style="text-decoration: underline;">Understand Goals</span></em></h3>
-        <p>Speak with <strong>Narrative Designers</strong>, <strong>VFX</strong>, <strong>Animators</strong>, <strong>UIUX</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
+        <h2>1. <span style="text-decoration: underline;">Understand Goals</span></h2>
+        <p>
+            Speak with <strong>Narrative Designers</strong>, <strong>Engineers</strong>, <strong>VFX</strong>,
+            <strong>Animators</strong>, <strong>UIUX</strong>, <strong>Producers</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
     </div>
     <div class="designProcessItem">
-        <h3><em>2. <span style="text-decoration: underline;">Brainstorm & Research</span></em></h3>
+        <h2>2. <span style="text-decoration: underline;">Brainstorm & Research</span></h2>
         <p>
             What could be <strong>missing</strong> from our game?
             What things do I find <strong>fun</strong>?
@@ -55,14 +57,14 @@ title: "About Me"
         </p>
     </div>
     <div class="designProcessItem">
-        <h3><em>3. <span style="text-decoration: underline;">Implement</span></em></h3>
+        <h2>3. <span style="text-decoration: underline;">Implement</span></h2>
         <p>
             <strong>Implement</strong>, <strong>iterate</strong>, and <strong>debug</strong>
             prototypes by <strong>scripting</strong> or working <strong>in-editor</strong>.
         </p>
     </div>
     <div class="designProcessItem">
-        <h3><em>4. <span style="text-decoration: underline;">Playtest</span></em></h3>
+        <h2>4. <span style="text-decoration: underline;">Playtest</span></h2>
         <p>
             Lead and participate in <strong>playtests</strong> to give and receive valuable <strong>feedback</strong> and <strong>data</strong>.
             <br>
@@ -75,7 +77,7 @@ title: "About Me"
 <hr>
 
 <div class="topContainer">
-    <h1>Currently Playing</h1>
+    <h1>Currently <br class="onlyOnSmallestMobile">Playing</h1>
 </div>
 
 <div class="homePageGames">    
@@ -96,7 +98,7 @@ title: "About Me"
 <hr>
 
 <div class="topContainer">
-    <h1>Favorite Games</h1>
+    <h1>Favorite <br class="onlyOnSmallestMobile">Games</h1>
 </div>
 <div class="homePageGames">    
     <div class="game">
