Added Slugs & Scorpions page!

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ title: "Home"
 </div>
 <div class="homePageGames">
     <div class="game">
+        <a href="slugsAndScorpions.html"><img src="images/Slugs And Scorpions/LogoWBackground.png" alt="Slugs & Scorpions" class="borderMedia"></a>
+        <figcaption>SLUGS & SCORPIONS!</figcaption>
+    </div>
+    <div class="game">
         <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
         <figcaption>THE WORMCHELOR</figcaption>
     </div>
