Added Quickshot page
and other small fixes

--- a/UCIWare.html
+++ b/UCIWare.html
@@ -19,7 +19,7 @@ title: "UCI-Ware"
     <div class="item">
         <em>My role:</em>
         <h2><strong>Team Lead, Gameplay Designer, Artist</strong></h2>
-        <h3>March 2023 - June 2023 (4 Months)</h3>
+        <em>Unity | March 2023 - June 2023 | 11 Team Members</em>
         <ul>
             <li>Created a <strong>WarioWare-inspired</strong> game based on the daily lives of UC Irvine students.</li>
             <li>Delegated tasks and scheduled meetings for a team of <strong>over 10 people</strong>, ensuring to meet deadlines.</li>
