--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@ title: "About Me"
         <p>
             <br>
             I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
-            As of March 2024, I'm also a <strong>Design officer</strong> at <strong>UCI's Video Game Development Club</strong>.
             I'm a big fan of <strong>autobattlers</strong> and <strong>roguelikes</strong> and I derive a lot of my inspiration from them.
         </p>
         <div class="customizaAboutMe">
@@ -51,7 +50,6 @@ title: "About Me"
         <h2>2. <span style="text-decoration: underline;">Brainstorm & Research</span></h2>
         <p>
             What could be <strong>missing</strong> from our game?
-            What things do I find <strong>fun</strong>?
             What <strong>similar content</strong> already exists in our game or others?
             What did <strong>players think</strong> of that content?
         </p>
@@ -60,7 +58,7 @@ title: "About Me"
         <h2>3. <span style="text-decoration: underline;">Implement</span></h2>
         <p>
             <strong>Implement</strong>, <strong>iterate</strong>, and <strong>debug</strong>
-            prototypes by <strong>scripting</strong> or working <strong>in-editor</strong>.
+            prototypes by <strong>scripting</strong> and/or working <strong>in-editor</strong>.
         </p>
     </div>
     <div class="designProcessItem">
@@ -69,7 +67,7 @@ title: "About Me"
             Lead and participate in <strong>playtests</strong> to give and receive valuable <strong>feedback</strong> and <strong>data</strong>.
             <br>
             Unless things feel <strong>"just right"</strong>, go back to 
-            <br><strong>2. Brainstorm & Research</strong>!
+            <br><strong>1. Understand Goals</strong>!
         </p>
     </div>
 </div>
