--- a/diablo.html
+++ b/diablo.html
@@ -21,11 +21,11 @@ title: "Diablo IV"
     <div class="item">
         <em>My role:</em>
         <h2><strong>Class Design Intern</strong></h2>
-        <h3>June 2024 - September 2024 (4 Months)</h3>
+        <em>June 2024 - September 2024</em>
         <p>
             <ul>
                 <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
-                <li>Created <strong>4 permanent powers</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
+                <li>Created <strong>4 evergreen powers</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
                 <li>Consulted with <strong>Narrative Designers</strong> to name <strong>38</strong> permanent Spiritborn powers.</li>
                 <li>Prototyped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong>.</li>
                 <li>Collaborated with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
