--- a/drivetalk.html
+++ b/drivetalk.html
@@ -18,8 +18,8 @@ title: "drivetalk"
 
     <div class="item">
         <em>My role:</em>
-        <h2><strong>Team Lead, Gameplay Designer, Narrative Designer</strong></h2>
-        <h3>September 2024 - Present</h3>
+        <h2><strong>Team Lead, Systems, Content, & Narrative Designer</strong></h2>
+        <em>Unity | September 2024 - March 2025 | 10 Team Members</em>
         <ul>
             <li>Developed and pitched a <strong>40+ minute</strong> narrative-driven game about a <strong>driving a taxi</strong>.</li>
             <li>Led a team with <strong>deliberate decisions</strong> and a <strong>unified vision</strong> to harbor an efficient development process.</li>
