--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ title: "Home"
         <figcaption>UCI-WARE</figcaption>
     </div>
     <div class="game">
+        <a href="quickshot.html"><img src="images/Quickshot/Quickshot.png" alt="Quickshot"></a>
+        <figcaption>QUICKSHOT</figcaption>
+    </div>
+    <div class="game">
         <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
         <figcaption>EDO EDO TEISHOKU!</figcaption>
     </div>
