--- a/overwatch2.html
+++ b/overwatch2.html
@@ -18,7 +18,7 @@ title: "Overwatch 2"
         <em>My role:</em>
         <h2><strong>Hero Design Intern</strong></h2>
         <h3>SPARX (Sophomore) Intern</h3>
-        <h3>June 2023 - September 2023 (4 Months)</h3>
+        <em>June 2023 - September 2023</em>
         <p>
             <ul>
                 <li>Implemented an original, fully playable Overwatch 2 hero with <strong>5 unique abilities</strong>.</li>
