--- a/wormchelor.html
+++ b/wormchelor.html
@@ -15,7 +15,7 @@ title: "The Wormchelor"
     <div class="item">
         <em>My role:</em>
         <h2><strong>Team Lead, Gameplay Designer, Artist</strong></h2>
-        <h3>September 2023 - December 2023 (4 Months)</h3>
+        <em>Physical Card Game | September 2023 - December 2023 | 6 Team Members</em>
         <ul>
             <li>Created a party game themed around <strong>worms</strong> where players use word combinations to try to impress the judge!</li>
             <li>Led meetings to hone our game's <strong>vision</strong> given a limited timeframe.</li>
