--- a/edoEdo.html
+++ b/edoEdo.html
@@ -19,7 +19,7 @@ title: "Edo Edo Teishoku!"
     <div class="item">
         <em>My role:</em>
         <h2><strong>Combat Designer</strong></h2>
-        <h3>September 2023 - March 2024 (7 Months)</h3>
+        <em>Unity | September 2023 - March 2024 | 40+ Team Members</em>
         <ul>
             <li>Designed on a team to create a <strong>deckbuilder roguelike</strong> set in a world full of cooking themed monsters.</li>
             <li>Created a detailed <strong>skill tree</strong> with <strong>13 abilities</strong> for a playable character class.</li>
