--- a/slugsAndScorpions.html
+++ b/slugsAndScorpions.html
@@ -19,7 +19,7 @@ title: "Slugs & Scorpions!"
     <div class="item">
         <em>My role:</em>
         <h2><strong>Team Lead, Designer, Artist</strong></h2>
-        <h3>September 2024 - December 2024 (3 Months)</h3>
+        <em>Physical Card Game | September 2024 - December 2024 | 3 Team Members</em>
         <ul>
             <li>Created an <strong>‘easy to learn, hard to master’</strong> party game focused on risk-taking and bluffing themed around bugs.</li>
             <li>Rapidly prototyped and held at least <strong>2 playtests per week</strong> to continue iterating.</li>
