Added tags to homepage games
Also changed Slugs & Scorpions homepage thumbnail to have higher contrast

--- a/drivetalk.html
+++ b/drivetalk.html
@@ -18,7 +18,7 @@ title: "drivetalk"
 
     <div class="item">
         <em>My role:</em>
-        <h2><strong>Team Lead, Systems, Content, & Narrative Designer</strong></h2>
+        <h2><strong>Team Lead, Systems & Narrative Designer</strong></h2>
         <em>Unity | September 2024 - March 2025 | 10 Team Members</em>
         <ul>
             <li>Developed and pitched a <strong>40+ minute</strong> narrative-driven game about a <strong>driving a taxi</strong>.</li>
