--- a/index.html
+++ b/index.html
@@ -8,12 +8,26 @@ title: "Home"
 <div class="homePageGames">
     <br>
     <div class="game">
+        <h2>DIABLO IV</h2>
         <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
-        <figcaption>DIABLO IV</figcaption>
+    <!-- If you want titles below the thumbnail, use this figcaption structure:
+         <figcaption>DIABLO IV</figcaption> -->
+         <ul class="tags">
+            <li class="Internship">Internship</li>
+            <li class="CombatDesign">Combat Design</li>
+            <li class="ARPG">ARPG</li>
+            <li class="LiveService">Live Service</li>
+        </ul>
     </div>
     <div class="game">
+        <h2>OVERWATCH 2</h2>
         <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
-        <figcaption>OVERWATCH 2</figcaption>
+        <ul class="tags">
+            <li class="Internship">Internship</li>
+            <li class="CombatDesign">Combat Design</li>
+            <li class="FPS">FPS</li>
+            <li class="LiveService">Live Service</li>
+        </ul>
     </div>
 </div>
 <hr>
@@ -22,20 +36,47 @@ title: "Home"
 </div>
 <div class="homePageGames">
     <div class="game">
+        <h2>DRIVETALK</h2>
         <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
-        <figcaption>DRIVETALK</figcaption>
+        <ul class="tags">
+            <li class="TeamLead">Team Lead</li>
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="Narrative">Narrative</li>
+            <li class="Unity">Unity</li>
+            <li class="morethan40">10+ Team Members</li>
+        </ul>
     </div>
     <div class="game">
+        <h2>UCI-WARE</h2>
         <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
-        <figcaption>UCI-WARE</figcaption>
+        <ul class="tags">
+            <li class="TeamLead">Team Lead</li>
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="Art">2D Art</li>
+            <li class="Unity">Unity</li>
+            <li class="morethan40">10+ Team Members</li>
+        </ul>
     </div>
     <div class="game">
+        <h2>QUICKSHOT</h2>
         <a href="quickshot.html"><img src="images/Quickshot/Quickshot.png" alt="Quickshot"></a>
-        <figcaption>QUICKSHOT</figcaption>
+        <ul class="tags">
+            <li class="CombatDesign">Combat Design</li>
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="FPS">FPS</li>
+            <li class="Unity">Unity</li>
+            <li class="morethan40">10+ Team Members</li>
+        </ul>
     </div>
     <div class="game">
+        <h2>EDO EDO TEISHOKU!</h2>
         <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
-        <figcaption>EDO EDO TEISHOKU!</figcaption>
+        <ul class="tags">
+            <li class="CombatDesign">Combat Design</li>
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="Unity">Unity</li>
+            <li class="morethan40">40+ Team Members</li>
+        </ul>
     </div>
 </div>
 <hr>
@@ -44,12 +85,26 @@ title: "Home"
 </div>
 <div class="homePageGames">
     <div class="game">
-        <a href="slugsAndScorpions.html"><img src="images/Slugs And Scorpions/LogoWBackground.png" alt="Slugs & Scorpions" class="borderMedia"></a>
-        <figcaption>SLUGS & SCORPIONS!</figcaption>
+        <h2>SLUGS & SCORPIONS!</h2>
+        <!-- Add class: "borderMedia" to add an outline to the image for better contrast -->
+        <a href="slugsAndScorpions.html"><img src="images/Slugs And Scorpions/LogoWColorfulBackground.png" alt="Slugs & Scorpions"></a>
+        <ul class="tags">
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="Art">2D Art</li>
+            <li class="Party">Party Game</li>
+            <li class="lessthan10">>10 Team Members</li>
+        </ul>
     </div>
     <div class="game">
+        <h2>THE WORMCHELOR</h2>
         <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
-        <figcaption>THE WORMCHELOR</figcaption>
+        <ul class="tags">
+            <li class="TeamLead">Team Lead</li>
+            <li class="SystemsDesign">Systems Design</li>
+            <li class="Art">2D Art</li>
+            <li class="Party">Party Game</li>
+            <li class="lessthan10">>10 Team Members</li>
+        </ul>
     </div>
     <!--
     <div class="game">
