Removed some homepage game tags

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@ title: "Home"
          <ul class="tags">
             <li class="Internship">Internship</li>
             <li class="CombatDesign">Combat Design</li>
-            <li class="ARPG">ARPG</li>
-            <li class="LiveService">Live Service</li>
         </ul>
     </div>
     <div class="game">
@@ -25,14 +23,12 @@ title: "Home"
         <ul class="tags">
             <li class="Internship">Internship</li>
             <li class="CombatDesign">Combat Design</li>
-            <li class="FPS">FPS</li>
-            <li class="LiveService">Live Service</li>
         </ul>
     </div>
 </div>
 <hr>
 <div class="topContainer">
-    <h1>Game Projects</h1>
+    <h1>Unity Projects</h1>
 </div>
 <div class="homePageGames">
     <div class="game">
@@ -42,8 +38,6 @@ title: "Home"
             <li class="TeamLead">Team Lead</li>
             <li class="SystemsDesign">Systems Design</li>
             <li class="Narrative">Narrative</li>
-            <li class="Unity">Unity</li>
-            <li class="morethan40">10+ Team Members</li>
         </ul>
     </div>
     <div class="game">
@@ -53,8 +47,6 @@ title: "Home"
             <li class="TeamLead">Team Lead</li>
             <li class="SystemsDesign">Systems Design</li>
             <li class="Art">2D Art</li>
-            <li class="Unity">Unity</li>
-            <li class="morethan40">10+ Team Members</li>
         </ul>
     </div>
     <div class="game">
@@ -64,8 +56,6 @@ title: "Home"
             <li class="CombatDesign">Combat Design</li>
             <li class="SystemsDesign">Systems Design</li>
             <li class="FPS">FPS</li>
-            <li class="Unity">Unity</li>
-            <li class="morethan40">10+ Team Members</li>
         </ul>
     </div>
     <div class="game">
@@ -74,8 +64,7 @@ title: "Home"
         <ul class="tags">
             <li class="CombatDesign">Combat Design</li>
             <li class="SystemsDesign">Systems Design</li>
-            <li class="Unity">Unity</li>
-            <li class="morethan40">40+ Team Members</li>
+            <li class="Roguelike">Roguelike</li>
         </ul>
     </div>
 </div>
@@ -92,7 +81,6 @@ title: "Home"
             <li class="SystemsDesign">Systems Design</li>
             <li class="Art">2D Art</li>
             <li class="Party">Party Game</li>
-            <li class="lessthan10">>10 Team Members</li>
         </ul>
     </div>
     <div class="game">
@@ -103,7 +91,6 @@ title: "Home"
             <li class="SystemsDesign">Systems Design</li>
             <li class="Art">2D Art</li>
             <li class="Party">Party Game</li>
-            <li class="lessthan10">>10 Team Members</li>
         </ul>
     </div>
     <!--
