updated Slugs&Scorp homepage image oopsie

--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@ title: "Home"
     <br>
     <div class="game">
         <h2>DIABLO IV</h2>
-        <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
-    <!-- If you want titles below the thumbnail, use this figcaption structure:
-         <figcaption>DIABLO IV</figcaption> -->
-         <ul class="tags">
-            <li class="Internship">Internship</li>
-            <li class="CombatDesign">Combat Design</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="diablo.html"><img src="images/DiabloIV/diablo4.jpg" alt="Diablo IV"></a>
+        <!-- If you want titles below the thumbnail, use this figcaption structure:
+            <figcaption>DIABLO IV</figcaption> -->
+            <ul class="tags">
+                <li class="Internship">Internship</li>
+                <li class="CombatDesign">Combat Design</li>
+            </ul>
+        </div>
     </div>
     <div class="game">
         <h2>OVERWATCH 2</h2>
-        <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
-        <ul class="tags">
-            <li class="Internship">Internship</li>
-            <li class="CombatDesign">Combat Design</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
+            <ul class="tags">
+                <li class="Internship">Internship</li>
+                <li class="CombatDesign">Combat Design</li>
+            </ul>
+        </div>
     </div>
 </div>
 <hr>
@@ -33,39 +37,47 @@ title: "Home"
 <div class="homePageGames">
     <div class="game">
         <h2>DRIVETALK</h2>
-        <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
-        <ul class="tags">
-            <li class="TeamLead">Team Lead</li>
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="Narrative">Narrative</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
+            <ul class="tags">
+                <li class="TeamLead">Team Lead</li>
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="Narrative">Narrative</li>
+            </ul>
+        </div>
     </div>
     <div class="game">
         <h2>UCI-WARE</h2>
-        <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
-        <ul class="tags">
-            <li class="TeamLead">Team Lead</li>
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="Art">2D Art</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
+            <ul class="tags">
+                <li class="TeamLead">Team Lead</li>
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="Art">2D Art</li>
+            </ul>
+        </div>
     </div>
     <div class="game">
         <h2>QUICKSHOT</h2>
-        <a href="quickshot.html"><img src="images/Quickshot/Quickshot.png" alt="Quickshot"></a>
-        <ul class="tags">
-            <li class="CombatDesign">Combat Design</li>
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="FPS">FPS</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="quickshot.html"><img src="images/Quickshot/Quickshot.png" alt="Quickshot"></a>
+            <ul class="tags">
+                <li class="CombatDesign">Combat Design</li>
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="FPS">FPS</li>
+            </ul>
+        </div>
     </div>
     <div class="game">
         <h2>EDO EDO TEISHOKU!</h2>
-        <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
-        <ul class="tags">
-            <li class="CombatDesign">Combat Design</li>
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="Roguelike">Roguelike</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="edoEdo.html"><img src="images/Edo Edo Teishoku!/EdoTitleArt-SweetBoss.png" alt="Edo Edo Teishoku!"></a>
+            <ul class="tags">
+                <li class="CombatDesign">Combat Design</li>
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="Roguelike">Roguelike</li>
+            </ul>
+        </div>
     </div>
 </div>
 <hr>
@@ -75,23 +87,27 @@ title: "Home"
 <div class="homePageGames">
     <div class="game">
         <h2>SLUGS & SCORPIONS!</h2>
-        <!-- Add class: "borderMedia" to add an outline to the image for better contrast -->
-        <a href="slugsAndScorpions.html"><img src="images/Slugs And Scorpions/LogoWColorfulBackground.png" alt="Slugs & Scorpions"></a>
-        <ul class="tags">
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="Art">2D Art</li>
-            <li class="Party">Party Game</li>
-        </ul>
+        <div class="hoverfilter">
+            <!-- Add class: "borderMedia" to add an outline to the image for better contrast -->
+            <a href="slugsAndScorpions.html"><img src="images/Slugs And Scorpions/LogoWColorfulBackground.png" alt="Slugs & Scorpions"></a>
+            <ul class="tags">
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="Art">2D Art</li>
+                <li class="Party">Party Game</li>
+            </ul>
+        </div>
     </div>
     <div class="game">
         <h2>THE WORMCHELOR</h2>
-        <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
-        <ul class="tags">
-            <li class="TeamLead">Team Lead</li>
-            <li class="SystemsDesign">Systems Design</li>
-            <li class="Art">2D Art</li>
-            <li class="Party">Party Game</li>
-        </ul>
+        <div class="hoverfilter">
+            <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
+            <ul class="tags">
+                <li class="TeamLead">Team Lead</li>
+                <li class="SystemsDesign">Systems Design</li>
+                <li class="Art">2D Art</li>
+                <li class="Party">Party Game</li>
+            </ul>
+        </div>
     </div>
     <!--
     <div class="game">
