Added name & role to homepage
and some other small things!

--- a/about.html
+++ b/about.html
@@ -6,14 +6,25 @@ title: "About Me"
     <h1 class="gameTitle">{{ page.title }}</h1>
 </div>
 <ul class="aboutMe">
-    <div class="aboutMeItem">
-        <img style="max-width: 350px" src="/images/Me3.jpg" alt="Me!">
+    <div class="aboutMeItem" style="min-width: 350px; max-width: 25%">
+        <img src="/images/Me3.jpg" alt="Me!">
         <p class="onlyOnMobile"><br></p>
     </div>
 
     <div class="aboutMeItem">
         <h2 style="font-size: 2.5rem;">I'm <strong>
-            <span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><span style="color: #ea3959">F</span><span style="color: #ed4084">r</span><span style="color: #e454ad">a</span><span style="color: #d06bcf">n</span><span style="color: #b581e8">c</span><span style="color: #9394f7">e</span><span style="color: #6fa4fc">s</span><span style="color: #4fb2f7">c</span><span style="color: #3dbceb">a</span></strong>. <em style="font-size: 1.5rem;">(she/her)</em></h2>
+            <span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><!--
+            --><span style="color: #ea3959">F</span><!--
+            --><span style="color: #ed4084">r</span><!--
+            --><span style="color: #e454ad">a</span><!--
+            --><span style="color: #d06bcf">n</span><!--
+            --><span style="color: #b581e8">c</span><!--
+            --><span style="color: #9394f7">e</span><!--
+            --><span style="color: #6fa4fc">s</span><!--
+            --><span style="color: #4fb2f7">c</span><!--
+            --><span style="color: #3dbceb">a</span></strong><!--
+            -->. <em style="font-size: 1.5rem;">(she/her)</em>
+        </h2>
         <p>
             <br>
             I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
@@ -39,7 +50,8 @@ title: "About Me"
 <div class="topContainer">
     <h1 style="margin-bottom:1.5rem;">My Design Process!</h1>
 </div>
-<div class="gamesContainer">
+<div class="gamesContainer" style="margin: 0rem 15% 2rem;
+">
     <div class="designProcessItem">
         <h2>1. <span style="text-decoration: underline;">Understand Goals</span></h2>
         <p>
@@ -80,15 +92,21 @@ title: "About Me"
 
 <div class="homePageGames">    
     <div class="game">
-        <a href="https://playthebazaar.com/"><img src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art"></a>
+        <a href="https://playthebazaar.com/">
+            <img class="hoverfilter" src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art">
+        </a>
         <figcaption>THE BAZAAR</figcaption>
     </div>
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us"><img src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Lost City of Un'Goro Cover Art"></a>
+        <a href="https://hearthstone.blizzard.com/en-us">
+            <img  class="hoverfilter" src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Lost City of Un'Goro Cover Art">
+        </a>
         <figcaption>HEARTHSTONE</figcaption>
     </div>
     <div class="game">
-        <a href="https://teamfighttactics.leagueoflegends.com/en-us/"><img src="images/CurrentlyPlaying/TFTSet15.jpg" alt="Teamfight Tactics Set 15 Cover Art"></a>
+        <a href="https://teamfighttactics.leagueoflegends.com/en-us/">
+            <img  class="hoverfilter" src="images/CurrentlyPlaying/TFTSet15.jpg" alt="Teamfight Tactics Set 15 Cover Art">
+        </a>
         <figcaption>TEAMFIGHT TACTICS</figcaption>
     </div>
 </div>
@@ -100,15 +118,21 @@ title: "About Me"
 </div>
 <div class="homePageGames">    
     <div class="game">
-        <a href="https://store.steampowered.com/app/1426300/The_Binding_of_Isaac_Repentance/"><img src="images/FavoriteGames/bindingOfIsaac.jpg" alt="The Binding of Isaac: Repentance Cover Art"></a>
+        <a href="https://store.steampowered.com/app/1426300/The_Binding_of_Isaac_Repentance/">
+            <img  class="hoverfilter" src="images/FavoriteGames/bindingOfIsaac.jpg" alt="The Binding of Isaac: Repentance Cover Art">
+        </a>
         <figcaption>THE BINDING OF ISAAC</figcaption>
     </div>
     <div class="game">
-        <a href="https://store.steampowered.com/app/3320/Insaniquarium_Deluxe/"><img src="images/FavoriteGames/insaniquarium.png" alt="Insaniquarium Cover Art"></a>
+        <a href="https://store.steampowered.com/app/3320/Insaniquarium_Deluxe/">
+            <img  class="hoverfilter" src="images/FavoriteGames/insaniquarium.png" alt="Insaniquarium Cover Art">
+        </a>
         <figcaption>INSANIQUARIUM</figcaption>
     </div>
     <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/"><img src="images/FavoriteGames/hearthstonebattlegrounds.jpg" alt="Hearthstone Battlegrounds Cover Art"></a>
+        <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/">
+            <img class="hoverfilter" src="images/FavoriteGames/hearthstonebattlegrounds.jpg" alt="Hearthstone Battlegrounds Cover Art">
+        </a>
         <figcaption style="font-size: 1.5em;">HEARTHSTONE BATTLEGROUNDS</figcaption>
     </div>
 </div>
