--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 layout: default
 title: "Home"
 ---
+<div class="homePageIntro">
+    <h2><span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><!--
+        --><span style="color: #ce2f4e">F</span><!--
+        --><span style="color: #d03067">r</span><!--
+        --><span style="color: #d13180">a</span><!--
+        --><span style="color: #d33199">n</span><!--
+        --><span style="color: #d532b3">c</span><!--
+        --><span style="color: #d733cd">e</span><!--
+        --><span style="color: #ca34d8">s</span><!--
+        --><span style="color: #b335da">c</span><!--
+        --><span style="color: #9b36dc">a </span><!--
+        --><span style="color: #8436dd">M</span><!--
+        --><span style="color: #6c37df">a</span><!--
+        --><span style="color: #5438e1">n</span><!--
+        --><span style="color: #3c39e2">c</span><!--
+        --><span style="color: #3a50e4">i</span><!--
+        --><span style="color: #3b6be6">l</span><!--
+        --><span style="color: #3b86e8">l</span><!--
+        --><span style="color: #3ca1e9">a</span><!--
+        --><span style="color: #3dbceb">s</span>
+    </strong></h2>
+    <h1>GAME DESIGNER</h1>
+</div>
 <div class="topContainer">
     <h1  style="margin-top: 3rem;">Professional Experience</h1>
 </div>
@@ -32,7 +55,7 @@ title: "Home"
 </div>
 <hr>
 <div class="topContainer">
-    <h1>Unity Projects</h1>
+    <h1>Personal Projects</h1>
 </div>
 <div class="homePageGames">
     <div class="game">
