--- a/drivetalk.html
+++ b/drivetalk.html
@@ -29,6 +29,14 @@ title: "drivetalk"
         </ul>
     </div>
 
+
+    <div class="item">
+        <h2>Creating a Unified Vision</h2>
+        <p>
+            Early on, our team came up with interesting mechanics and aesthetics, but we quickly found ourselves 
+        </p>
+    </div>
+
     <div class="item">
         <h2><em>What is drivetalk</em>?</h2>
         <p>
