Added mobile responsiveness for 2K screens
now fonts & other things resize (usually larger) to accomodate and look nice on 2K or larger screens

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: "About Me"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
 </div>
 <ul class="aboutMe">
@@ -47,7 +47,7 @@ title: "About Me"
 
 <hr>
 
-<div class="topContainer">
+<div class="titleContainer">
     <h1 style="margin-bottom:1.5rem;">My Design Process!</h1>
 </div>
 <div class="gamesContainer" style="margin: 0rem 15% 2rem;
@@ -86,7 +86,7 @@ title: "About Me"
 
 <hr>
 
-<div class="topContainer">
+<div class="titleContainer">
     <h1>Currently <br class="onlyOnSmallestMobile">Playing</h1>
 </div>
 
@@ -113,7 +113,7 @@ title: "About Me"
 
 <hr>
 
-<div class="topContainer">
+<div class="titleContainer">
     <h1>Favorite <br class="onlyOnSmallestMobile">Games</h1>
 </div>
 <div class="homePageGames">    
