--- a/astralOnslaught.html
+++ b/astralOnslaught.html
@@ -3,7 +3,7 @@ layout: default
 title: "Astral Onslaught"
 ---
 
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle leftText">{{ page.title }}</h1>
     <a href="https://maidandready.itch.io/astral-onslaught" class="playButton">Play Now!</a>
 </div>
