--- a/drivetalk.html
+++ b/drivetalk.html
@@ -2,7 +2,7 @@
 layout: default
 title: "drivetalk"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://6oymilk.itch.io/drivetalk" class="playButton">Play Now!</a>
 </div>
