--- a/quickshot.html
+++ b/quickshot.html
@@ -2,7 +2,7 @@
 layout: default
 title: "QuickShot"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://dtrmgiraffe.itch.io/quickshot" class="playButton">Play Now!</a>
 </div>
