--- a/slugsAndScorpions.html
+++ b/slugsAndScorpions.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Slugs & Scorpions!"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3361806565" class="playButton">Play Now!</a>
 </div>
