--- a/UCIWare.html
+++ b/UCIWare.html
@@ -2,7 +2,7 @@
 layout: default
 title: "UCI-Ware"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://francescafrog.itch.io/uci-ware" class="playButton">Play Now!</a>
 </div>
