--- a/edoEdo.html
+++ b/edoEdo.html
@@ -2,7 +2,7 @@
 layout: default
 title: "Edo Edo Teishoku!"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://funbam.itch.io/edo-edo-teishoku" class="playButton">Play Now!</a>
 </div>
