--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: "Home"
     </strong></h2>
     <h1>GAME DESIGNER</h1>
 </div>
-<div class="topContainer">
+<div class="titleContainer">
     <h1  style="margin-top: 3rem;">Professional Experience</h1>
 </div>
 <div class="homePageGames">
@@ -54,7 +54,7 @@ title: "Home"
     </div>
 </div>
 <hr>
-<div class="topContainer">
+<div class="titleContainer">
     <h1>Personal Projects</h1>
 </div>
 <div class="homePageGames">
@@ -104,7 +104,7 @@ title: "Home"
     </div>
 </div>
 <hr>
-<div class="topContainer">
+<div class="titleContainer">
     <h1>Physical Card Games</h1>
 </div>
 <div class="homePageGames">
