--- a/overwatch2.html
+++ b/overwatch2.html
@@ -3,7 +3,7 @@ layout: default
 title: "Overwatch 2"
 ---
 
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
 </div>
 <div class="gamesContainer">
