--- a/wormchelor.html
+++ b/wormchelor.html
@@ -2,7 +2,7 @@
 layout: default
 title: "The Wormchelor"
 ---
-<div class="topContainer">
+<div class="titleContainer">
     <h1 class="gameTitle">{{ page.title }}</h1>
     <a href="https://6oymilk.itch.io/the-wormchelor-card-game" class="playButton">Play Now!</a>
 </div>
